[package]
name = "rust_for_all"
version = "0.1.0"
authors = ["fqliao <fqliao@yeah.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.60"
jni = "0.13.0"

[build-dependencies]
cbindgen = "0.9.0"

